fix alignment issues

--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  align-items: flex-start;
   /* gap: 20px; */
 }
 
@@ -33,8 +34,8 @@
   margin-top: 1rem;
 }
 .s-button {
-  width: 8rem;
-  height: 2rem;
+  /* width: 8rem; */
+  /* height: 2rem; */
   margin-top: 1rem;
 }
 /* right sided */
@@ -58,7 +59,7 @@
 
 @media screen and (max-width: 480px) {
   .services {
-    margin-top: 0;
+    margin-top: 9rem;
     flex-direction: column;
     gap: 5rem;
     height: 66rem;
