--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -34,8 +34,8 @@
   margin-top: 1rem;
 }
 .s-button {
-  width: 8rem;
-  height: 2rem;
+  /* width: 8rem; */
+  /* height: 2rem; */
   margin-top: 4rem;
 }
 
